--- a/templates/mission/home.html
+++ b/templates/mission/home.html
@@ -33,7 +33,7 @@
           <a href="" class="btn2">Let's Talk</a>
         </div>
         <div class="hero-right">
-          <a href="/payment.html" class="pop"
+          <a href="{% url 'payment' %}" class="pop"
             >Donate <i class="fa-solid fa-circle-dollar-to-slot"></i
           ></a>
         </div>
