--- a/templates/mission/home.html
+++ b/templates/mission/home.html
@@ -111,9 +111,13 @@
         </p>
       </div>
     </section>
+
     {% include 'includes/gallery.html' %}
+
      <!-- --- Testimonials Section --- -->
        {% include 'includes/testimonials.html' %}
+
+       <!-- contact us for section -->
 
         {% include 'includes/contact_form.html' %}
 
