--- a/templates/mission/home.html
+++ b/templates/mission/home.html
@@ -115,6 +115,8 @@
     {% include 'includes/gallery.html' %}
 
      <!-- --- Testimonials Section --- -->
+     <h2 style="text-align: center; font-size: 40px !important; font-weight: 800; padding: 1rem 0;">Testimonials</h2>
+     <hr style="width: 30%; margin: auto; border: solid 2px;" >
        {% include 'includes/testimonials.html' %}
 
        <!-- contact us for section -->
